Fixes #316, image scaling on mobile

--- a/src/app/styles/atoms/_jumbotron.scss
+++ b/src/app/styles/atoms/_jumbotron.scss
@@ -2,6 +2,7 @@
     margin-bottom: 0;
     position: relative;
     height: 650px;
+    background-position: center center;
     background-size: cover;
 
     &.small {
