--- a/src/app/styles/components/_blocks.scss
+++ b/src/app/styles/components/_blocks.scss
@@ -85,6 +85,9 @@
             text-transform: uppercase;
             font-size: 1.6rem;
         }
+        img {
+            bottom: 0;
+        }
     }
     &.block-recent {
         height: 155px;
